<resources>
    <string name="app_name">Tarea C3_S2</string>
    <string name="email">Email</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="descripcion_del_contacto">Descripcion del Contacto</string>
    <string name="telefono">Telefono</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="seleccionar">SELECCIONAR</string>
</resources>
